[gd_scene load_steps=7 format=3 uid="uid://s05nmmd5gvxd"]

[ext_resource type="Script" path="res://Scripts/zax_PimpingUI.gd" id="1_vfhd3"]
[ext_resource type="Texture2D" uid="uid://du7c6hl2i107h" path="res://Assets/Sprites/pimicon.png" id="2_srxq5"]
[ext_resource type="Texture2D" uid="uid://tiy6qacvb8ml" path="res://Assets/Sprites/pimp-my-hide.png" id="3_3655a"]
[ext_resource type="Script" path="res://Scripts/zax_PimpSlot.gd" id="4_w41pa"]
[ext_resource type="Texture2D" uid="uid://c6w35ixf7v74j" path="res://Assets/Sprites/laser.png" id="5_edsyg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_47ovv"]

[node name="PimpingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vfhd3")

[node name="PimpingIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.111
anchor_bottom = 0.198
offset_right = 0.127991
offset_bottom = -0.304016
texture = ExtResource("2_srxq5")

[node name="PimpSlots" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -95.0001
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.32, 0.32)
metadata/_edit_use_anchors_ = true

[node name="PimpMyHidebg" type="TextureRect" parent="PimpSlots"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_3655a")

[node name="HornSlot" type="Button" parent="PimpSlots"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.168
anchor_top = 0.106
anchor_right = 0.254
anchor_bottom = 0.229
offset_left = 0.424011
offset_top = 0.122002
offset_right = 0.522034
offset_bottom = 0.272995
script = ExtResource("4_w41pa")

[node name="Pimps" type="Control" parent="PimpSlots/HornSlot"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="lazer" type="Button" parent="PimpSlots/HornSlot/Pimps"]
layout_mode = 2
anchor_left = -3.43437
anchor_top = -0.228125
anchor_right = -0.109375
anchor_bottom = 1.57187
text = "Lazer"
icon = ExtResource("5_edsyg")
flat = true
metadata/Unlocked = false
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="PimpSlots/HornSlot/Pimps/lazer"]
position = Vector2(50, 87.5)
scale = Vector2(3.33203, 2.74609)
texture = ExtResource("5_edsyg")

[node name="shotgun" type="Button" parent="PimpSlots/HornSlot/Pimps"]
layout_mode = 2
offset_left = 56.375
offset_top = -40.375
offset_right = 324.375
offset_bottom = 137.625
text = "Charlie brown"
metadata/Unlocked = false

[node name="machinegun" type="Button" parent="PimpSlots/HornSlot/Pimps"]
layout_mode = 2
offset_left = -178.0
offset_top = 131.5
offset_right = 90.0
offset_bottom = 309.5
text = "Minesaaaaaaaaaaaaaaaaaaaaaaa"
metadata/Unlocked = false

[node name="BodySlot" type="Button" parent="PimpSlots"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.360691
anchor_top = 0.286697
anchor_right = 0.45246
anchor_bottom = 0.417759
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_47ovv")
script = ExtResource("4_w41pa")
metadata/_edit_use_anchors_ = true

[node name="Pimps" type="Control" parent="PimpSlots/BodySlot"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="machete" type="Button" parent="PimpSlots/BodySlot/Pimps"]
layout_mode = 2
offset_left = -267.125
offset_top = -37.4998
offset_right = 0.874634
offset_bottom = -6.49982
text = "Minesaaaaaaaaaaaaaaaaaaaaaaa"
metadata/Unlocked = false

[node name="chainsaw" type="Button" parent="PimpSlots/BodySlot/Pimps"]
layout_mode = 2
offset_left = -267.125
offset_top = -2.49983
offset_right = 0.874634
offset_bottom = 28.5002
text = "Minesaaaaaaaaaaaaaaaaaaaaaaa"
metadata/Unlocked = false

[node name="sawblade" type="Button" parent="PimpSlots/BodySlot/Pimps"]
layout_mode = 2
offset_left = -267.125
offset_top = 32.5002
offset_right = 0.874634
offset_bottom = 63.5002
text = "Minesaaaaaaaaaaaaaaaaaaaaaaa"
metadata/Unlocked = false

[node name="MinifridgeSlot" type="Button" parent="PimpSlots"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.591296
anchor_top = 0.278506
anchor_right = 0.683065
anchor_bottom = 0.409568
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_47ovv")
script = ExtResource("4_w41pa")
metadata/_edit_use_anchors_ = true

[node name="Pimps" type="Control" parent="PimpSlots/MinifridgeSlot"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="regular" type="Button" parent="PimpSlots/MinifridgeSlot/Pimps"]
layout_mode = 2
offset_left = 103.0
offset_top = -172.0
offset_right = 436.0
offset_bottom = -141.0
text = "Minesaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
metadata/Unlocked = false

[node name="gold" type="Button" parent="PimpSlots/MinifridgeSlot/Pimps"]
layout_mode = 2
offset_left = 103.0
offset_top = -137.0
offset_right = 436.0
offset_bottom = -106.0
text = "Minesaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
metadata/Unlocked = false

[node name="platinum" type="Button" parent="PimpSlots/MinifridgeSlot/Pimps"]
layout_mode = 2
offset_left = 103.0
offset_top = -102.0
offset_right = 436.0
offset_bottom = -70.9995
text = "Minesaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
metadata/Unlocked = false

[node name="TailSlot" type="Button" parent="PimpSlots"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.730251
anchor_top = 0.507864
anchor_right = 0.82202
anchor_bottom = 0.638926
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_47ovv")
script = ExtResource("4_w41pa")
metadata/_edit_use_anchors_ = true

[node name="Pimps" type="Control" parent="PimpSlots/TailSlot"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="armor1" type="Button" parent="PimpSlots/TailSlot/Pimps"]
layout_mode = 2
offset_left = 103.125
offset_top = -118.75
offset_right = 353.125
offset_bottom = -87.7504
text = "Minesaaaaaaaaaaaaaaaaaaaaa"

[node name="armor2" type="Button" parent="PimpSlots/TailSlot/Pimps"]
layout_mode = 2
offset_left = 103.125
offset_top = -83.7504
offset_right = 353.125
offset_bottom = -52.7504
text = "Minesaaaaaaaaaaaaaaaaaaaaa"

[node name="armor3" type="Button" parent="PimpSlots/TailSlot/Pimps"]
layout_mode = 2
offset_left = 103.125
offset_top = -48.7504
offset_right = 353.125
offset_bottom = -17.7504
text = "Minesaaaaaaaaaaaaaaaaaaaaa"

[node name="armor4" type="Button" parent="PimpSlots/TailSlot/Pimps"]
layout_mode = 2
offset_left = 103.125
offset_top = -13.7504
offset_right = 353.125
offset_bottom = 17.2496
text = "Minesaaaaaaaaaaaaaaaaaaaaa"

[node name="armor5" type="Button" parent="PimpSlots/TailSlot/Pimps"]
layout_mode = 2
offset_left = 103.125
offset_top = 21.2496
offset_right = 353.125
offset_bottom = 52.2496
text = "Minesaaaaaaaaaaaaaaaaaaaaa"

[node name="HoovesSlot" type="Button" parent="PimpSlots"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375473
anchor_top = 0.561108
anchor_right = 0.467242
anchor_bottom = 0.69217
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_47ovv")
script = ExtResource("4_w41pa")
metadata/_edit_use_anchors_ = true

[node name="Pimps" type="Control" parent="PimpSlots/HoovesSlot"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="wheels" type="Button" parent="PimpSlots/HoovesSlot/Pimps"]
layout_mode = 2
offset_left = 103.0
offset_top = -34.0
offset_right = 390.0
offset_bottom = -3.0
text = "Minesaaaaaaaaaaaaaaaaaaaaaaaaa"

[node name="sawblades" type="Button" parent="PimpSlots/HoovesSlot/Pimps"]
layout_mode = 2
offset_left = 103.0
offset_top = 1.0
offset_right = 390.0
offset_bottom = 32.0
text = "Minesaaaaaaaaaaaaaaaaaaaaaaaaa"

[node name="fans" type="Button" parent="PimpSlots/HoovesSlot/Pimps"]
layout_mode = 2
offset_left = 103.0
offset_top = 36.0
offset_right = 390.0
offset_bottom = 67.0
text = "Minesaaaaaaaaaaaaaaaaaaaaaaaaa"

[connection signal="mouse_entered" from="PimpingIcon" to="." method="_signal_PimpingIcon_mouse_entered"]
